# mechanisms-of-repetition

./: .gitignore  AGENTS.md  CAUSAL_AUDIT.md  CAUSAL_METHODS_EXPLANATION.md  CAUSAL_METHODS_EXPLANATION_EMNLP.tex  HEAD_INTERVENTION_EXPERIMENT.md  ICL_NATURAL_PLAN.md  INTERMEDIATE_RESULTS_2026-04-02.md  OLMO_ATTENTION_FALLBACK_PLAN.md  OLMO_RESULTS.md  README.md  ablation_head_cycle_evolution.py  ablation_head_cycle_icl_natural.py  analyze_2x2_natural_icl_original_acquired.py  analyze_ablation_head_cycle.py  analyze_original_vs_acquired_attention.py  analyze_original_vs_acquired_heads.py  analyze_original_vs_acquired_simple.py  analyze_pile_mitigation_efficiency.py  build_apertus_combined_ablation.py  build_combined_ablation_generic.py  build_head_policy_matrix.py  calc_apertus_stats.py  combine_checkpoint_scatters.py  combine_cycle_grid_results.py  compute_cycle_descriptive_stats.py  compute_intro_cycle_stats.py  create_dual_alluvial_from_cycle_evolution.py  create_repetition_alluvial.py  cycle_evolution_original_vs_learnt.py  debug_apertus_generation.py  debug_output_apertus.txt  entropy_3way_categorization.py  entropy_analysis.py  entropy_evolution_analysis.py  format_latex.py  generate_ablation_conclusions.py  generate_alluvial_data.py  generate_pythia_examples.py  generate_pythia_examples_top_p.py  (+86 more)
cycle-attention-analysis/: README.md  monitor_rerun.sh  newline_token_verification.py  rerun_missing_data.sh  rerun_missing_data_fixed.sh  run_all_layers.sh  run_complete_workflow.sh  run_cycle_evolution.sh  run_parametric.sh  run_parametric_fixed.sh  run_single_layer.sh  (+5 more)
(+451 files in other folders)
