[tool.poetry]
name = "parrots"
version = "0.1.0"
description = ""
authors = ["mahautm <mateo.mahaut@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.10"
pandas = "^2.2.2"
torch = "^2.3.0"
tqdm = "^4.66.4"
typer = "^0.12.3"
accelerate = "^0.30.1"
datasets = "^2.19.1"
transformers = "^4.48.1"
sentencepiece = "^0.1.99"
protobuf = "^3.0.0,<=3.20.0"
mistral-inference = "^1.0.4"
rouge-score = "^0.1.2"
scipy = "1.13"
matplotlib = "^3.9.3"
transformer-lens = "^2.10.0"
egg = {path = "../EGG"}
bitsandbytes = "^0.45.0"
seaborn = "^0.13.2"
dadapy = "^0.3.2"
plotly = "^6.1.2"
joypy = "^0.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
